# PROI

./: .gitignore
209.2-parking/: .gitignore  CMakeLists.txt  README.MD  input.txt  main.cpp
209.2-parking/CarPark_lib/: CMakeLists.txt  Car.h  CarPark.cpp  CarPark.h  CarParkContainer.cpp  CarParkContainer.h  CarParkGui.cpp  CarParkGui.h  CarParkTile.h  Coordinates.h
209.2-parking/Doctest_tests/: CMakeLists.txt  CarParkTest.cpp
209.2-parking/scripts/: run-tests.sh  run.sh
zad1/: .gitignore  CMakeLists.txt  Car.cpp  Car.h  README.md  main.cpp
zad2/: CMakeLists.txt  README.md  dane.txt  main.cpp
zad2/Chart_lib/: CMakeLists.txt  CarChart.cpp  CarChart.h  Chart.cpp  Chart.h
zad2/Doctest_tests/: CMakeLists.txt  CarChartTest.cpp  ChartTest.cpp  doctest.h
zad2/scripts/: run-tests.sh  run.sh
zad3/: CMakeLists.txt  Rasztabiga.cpp
zad4/: .gitignore  CMakeLists.txt  Circle.cpp  Circle.h  Drawing.cpp  Drawing.h  DrawingSnapshot.cpp  DrawingSnapshot.h  DrawingTests.cpp  IFigure.h  Line.cpp  Line.h  README.md  RGB.cpp  RGB.h  Rectangle.cpp  Rectangle.h  XmlConverter.cpp  XmlConverter.h  XmlDocument.cpp  XmlDocument.h  XmlNode.cpp  XmlNode.h  XmlNodeAttribute.cpp  XmlNodeAttribute.h  doctest.h  exceptions.h  main.cpp
